
[TestEmpty/creates_SQL_migration_files - 1]
### 20240115123045_add_users.down.sql ###
-- migration: 20240115123045_add_users.down.sql

SELECT "down_20240115123045";

### 20240115123045_add_users.up.sql ###
-- migration: 20240115123045_add_users.up.sql

SELECT "up_20240115123045";



---

[TestEmpty/creates_Go_migration_file_with_custom_registry - 1]
### 20240115123045_add_users.go ###
// migration: 20240115123045_add_users.go

package migrations

import (
    "context"

    "github.com/jackc/pgx/v5"
)

//nolint:gochecknoinits
func init() {
    Registry.UpTx(up20240115123045)
    Registry.DownTx(down20240115123045)
}

func up20240115123045(ctx context.Context, tx pgx.Tx) error {
    return nil
}

func down20240115123045(ctx context.Context, tx pgx.Tx) error {
    return nil
}

### registry.go ###
package migrations

---

[TestEmpty/creates_Go_migration_file - 1]
### 20240115123045_add_users.go ###
// migration: 20240115123045_add_users.go

package migrations

import (
    "context"

    "github.com/jackc/pgx/v5"
        "go.inout.gg/conduit"
)

//nolint:gochecknoinits
func init() {
    conduit.UpTx(up20240115123045)
    conduit.DownTx(down20240115123045)
}

func up20240115123045(ctx context.Context, tx pgx.Tx) error {
    return nil
}

func down20240115123045(ctx context.Context, tx pgx.Tx) error {
    return nil
}


---

[TestEmpty/creates_Go_migration_file_with_custom_package_name - 1]
### 20240115123045_add_users.go ###
// migration: 20240115123045_add_users.go

package db

import (
    "context"

    "github.com/jackc/pgx/v5"
        "go.inout.gg/conduit"
)

//nolint:gochecknoinits
func init() {
    conduit.UpTx(up20240115123045)
    conduit.DownTx(down20240115123045)
}

func up20240115123045(ctx context.Context, tx pgx.Tx) error {
    return nil
}

func down20240115123045(ctx context.Context, tx pgx.Tx) error {
    return nil
}


---
